2007-06-07  Mo DeJong  <mdejong@users.sourceforge.net>

        * configure: Regen.
        * configure.in:
        * src/pkgIndex.tcl:
        * src/jacl/tcl/lang/Interp.java:
        * src/tcljava/tcl/lang/BlendExtension.java:
        * unix/tools/vutil/current:
        * unix/tools/vutil/vsub.sh:
        * win/makefile.vc: Update to version 1.4.1.
        Added release tag tcljava-141-2007-06-06.

2007-06-06  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/SubstCmd.java (cmdProc):
        Remove else branch that skipped \r characters since
        this did not match the C implementation.
        * tests/tcl/subst.test: Add test case for \r case.

2007-01-13  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/Expression.java (Atan2Function,
        PowFunction, AcosFunction, AsinFunction, AtanFunction
        FmodFunction, LogFunction, Log10Function,
        SqrtFunction):
        Add valid input bounds checks to math functions.
        Fix typo in log10() function that make it
        return incorrect results.

2006-09-16  Mo DeJong  <mdejong@users.sourceforge.net>

        * docs/TJC/module.html: Mention that PACKAGE
        statement is required in a module file.
        * src/tjc/tjc/library/module.tcl:
        Update module_parse_validate so that an
        error will be generated when no PACKAGE
        declaration is found in a module file.
        * tests/tjc/module.test: Check for missing
        PACKAGE statement.

2006-09-11  Mo DeJong  <mdejong@users.sourceforge.net>

        * docs/TclJava/ClassLoading.html: Update
        class loading info, mention use of context
        class loader and how env(TCL_CLASSPATH) should
        be used at runtime.
        * docs/TclJava/JavaSignatures.html: Update
        signature docs, add full signature example.
        * src/tcljava/tcl/lang/TclClassLoader.java (checkTclClasspath):
        A bug was causing changes to env(TCL_CLASSPATH) to