@@ -64,14 +64,30 @@
          <BR>
          <TABLE>
 
-            <TR>            
+            <TR>
+               <TD VALIGN=top>
+                  <B>September 12, 2007:</B>&nbsp;
+               </TD>
+               <TD>
+                  New Tcl/Java 1.4.1 release!<br>
+                  This release is considered stable and ready
+                  for evaluation in production environments.
+                  Developers deploying in a production environment
+                  should still favor the 1.3.3 release.
+                  <ul>
+                     <li>Fixed bug in Jacl's log10() expr function.</li>
+                     <li>Fixed buggy CR handling in Jacl's subst command.</li>
+                     <li>Fixed bug in classloader related to cached env(TCL_CLASSPATH) paths.</li>
+                  </ul>
+               </TD>
+            </TR>
+
+            <TR>
                <TD VALIGN=top>
                   <B>August 21, 2006:</B>&nbsp;
                </TD>
                <TD>
                   New Tcl/Java 1.4.0 release!<br>
-                  This release is <b>NOT</b> considered production
-                  ready, use 1.3.3 in production environments.
                   <ul>
                      <li>New TJC compiler for Jacl</li>
                      <li>Itcl port for Jacl</li>
